# src/controllers/auth/auth.controller.ts
@@ -1,14 +1,35 @@
-// import { Body, Controller, Get, Query } from '@nestjs/common';
-// import { EmailVerificationService } from 'src/services/email-verification/email-verification.service';
+import { Body, Controller, Post, HttpCode, HttpStatus } from '@nestjs/common';
+import { AuthService } from 'src/services/auth/auth.service';
+import { SignUpDto } from 'src/utils/types/dto/user/signUp.dto';
+import { SignInDto } from 'src/utils/types/dto/user/signIn.dto';
+import { AuthResponseDto } from 'src/utils/types/dto/user/authResponse.dto';
+import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
 
-// @Controller('auth')
-// export class AuthController {
-//   constructor(
-//     private readonly emailVerificationService: EmailVerificationService,
-//   ) {}
+@ApiTags('Auth')
+@Controller('auth')
+export class AuthController {
+  constructor(private readonly authService: AuthService) {}
 
-//   @Get('/confirm-email')
-//   async confirm(@Query('token') token: string) {
-//     await this.emailVerificationService.confirmEmail(token);
-//   }
-// }
+  @Post('/register')
+  @ApiOperation({ summary: 'User registration' })
+  @ApiResponse({
+    status: 201,
+    description: 'User registered successfully',
+    type: AuthResponseDto,
+  })
+  async register(@Body() createUserDto: SignUpDto): Promise<AuthResponseDto> {
+    return this.authService.signUp(createUserDto);
+  }
+
+  @Post('/login')
+  @HttpCode(HttpStatus.OK)
+  @ApiOperation({ summary: 'User login' })
+  @ApiResponse({
+    status: 200,
+    description: 'User logged in successfully',
+    type: AuthResponseDto,
+  })
+  async login(@Body() signInDto: SignInDto): Promise<AuthResponseDto> {
+    return this.authService.signIn(signInDto);
+  }
+}
